Rewrite narratives as descriptive example-driven instructor prose
Apply the required teaching style: context, why it exists, simple
explanation, analogy when useful, walked-through Java examples,
misunderstandings, and progressive transitions. Handcraft Ep01/04/07
as gold standards; regenerate the full 01–85 review pack accordingly.

Co-authored-by: ANKUR KUMAR <ankur0001@users.noreply.github.com>