@@ -5,205 +5,173 @@
 | Episode | 20 |
 | Title | Modules and JPMS |
 | Catalog handbook column | 20 |
-| Narration source script | Expanded review narration (4–15 min target) |
-| Spoken form | Conversational documentary beats + walkthrough code |
-| Runtime target | **4–15 minutes** (aim ~8–12) |
+| Narration source script | Descriptive instructor narration (4–15 min) |
+| Spoken form | Connected explanatory prose with walked-through examples |
+| Runtime target | **4–15 minutes** (aim ~10–12) |
 
-## Full narration (spoken beats)
+## Full narration
 
-### Scene `hook` (renderer: `hook`)
+### Opening — start with a problem
 
-1. Sealed types close inheritance. Modules close the classpath.
-2. JPMS — Java Platform Module System — explicit boundaries since Java 9.
-3. What you require. What you export. What stays internal.
+In the previous episode, we worked through **Sealed Classes**. That gave us a piece of the platform. Today we need the next piece: **Modules and JPMS**.
 
-### Scene `title` (renderer: `title`)
+We are continuing The Java Story, and today's challenge is Modules and JPMS. The goal is not to memorize a definition — it is to understand a problem Java is trying to help us solve.
 
-1. Episode Twenty.
-2. Modules and JPMS — strong encapsulation.
+Modules restore strong encapsulation the classpath erased.
 
-### Scene `why` (renderer: `why`)
+I am not going to rush through slogans. We will introduce the idea in context, explain why it exists, look at Java code, walk through that code, and only then move on.
 
-1. Flat classpath — accidental access to public types everywhere.
-2. Split packages. Leaky internals. Classpath order roulette.
-3. Modules declare graph upfront — JVM enforces.
+### Why this exists
 
-### Scene `info` (renderer: `info`)
+In simple language, modules and jpms is a tool for a recurring design problem. If we ignore that problem, we can still write code for a while — and then the cost shows up as duplication, fragile APIs, runtime surprises, or code that only the original author understands.
 
-1. module-info.java — requires and exports.
-2. Internal packages hidden even if types are public.
+A helpful picture: Keep a simple picture of Modules and JPMS.
 
-### Scene `example` (renderer: `example`)
+Hold that picture lightly. We will come straight back to Java so the analogy clarifies the mechanism instead of replacing it.
 
-1. Walk payments module descriptor.
+### Building the idea step by step
+
+#### Step 1
+
+Now consider this teaching point: module-info requires/exports/opens.
+
+This is usually the first thing you need in your mental model. If this step is fuzzy, the later details will feel like trivia.
+
+Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
+
+#### Step 2
+
+Now consider this teaching point: Explicit dependencies.
+
+Notice how this extends the previous step. We are not collecting disconnected facts — we are assembling a mechanism.
+
+Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
+
+#### Step 3
+
+Now consider this teaching point: Stronger encapsulation than packages alone.
+
+Ask yourself: if we skipped this detail, what bug or design smell would become more likely?
+
+Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
+
+#### Step 4
+
+Now consider this teaching point: Migration can be incremental.
+
+Ask yourself: if we skipped this detail, what bug or design smell would become more likely?
+
+Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
+
+#### Step 5
+
+Now consider this teaching point: Classpath apps still exist — know both worlds.
+
+This last point is often where beginners and experienced developers separate. Tutorials mention it. Production work depends on it.
+
+Say it back in your own words before we look at code. If you can explain the 'why', the syntax becomes much easier to remember.
+
+### Example 1 — the smallest useful illustration
+
+Let's start with the smallest example that still teaches the real idea. Read it slowly. Every line is doing work.
+
 ```java
-module com.shop.payments {
-    requires java.sql;
-    requires com.shop.common;
-
-    exports com.shop.payments.api;
-
-    opens com.shop.payments.api to com.fasterxml.jackson.databind;
+module com.shop.app {
+  requires com.shop.core;
+  exports com.shop.app.api;
 }
 ```
 
-2. requires java.sql and com.shop.common.
-3. exports com.shop.payments.api only.
-4. opens for reflection frameworks like Jackson when needed.
+Why is this code here? Because an abstract definition is easy to nod at and hard to use. The example forces the idea into a concrete shape.
 
-### Scene `directives` (renderer: `directives`)
+I'll walk this example like we're pair-programming.
 
-1. requires transitive for re-exported dependencies.
-2. exports to for narrow API consumers.
-3. provides/uses for service loading.
+Focus on the idea each line encodes.
 
-### Scene `unnamed` (renderer: `unnamed`)
+Then we connect it to the production failure mode.
 
-1. Classpath JARs — unnamed module.
-2. Migration incremental — automatic modules from JAR names.
+Look at `module com.shop.app {`.
 
-### Scene `when` (renderer: `when`)
+Ask what would break if this line were missing, mistyped, or replaced with a 'simpler' shortcut. That question turns syntax into understanding.
 
-1. Platform libraries, jlink images, strong encapsulation.
-2. Many Spring Boot apps stay classpath-first unless boundary is product feature.
+Look at `requires com.shop.core;`.
 
-### Scene `deeper` (renderer: `deeper`)
+Ask what would break if this line were missing, mistyped, or replaced with a 'simpler' shortcut. That question turns syntax into understanding.
 
-1. java.base module — every module implicitly requires it.
-2. Module path versus classpath — module-path for modular JARs.
-3. jlink — build custom runtime — strip unused modules — smaller containers.
-4. Spring Boot 3 — Jakarta namespace — module path still optional for most apps.
-5. IllegalAccessError — calling internal JDK API — modules block strong encapsulation.
-6. --add-opens and --add-exports — migration escape hatches — use temporarily.
-7. ServiceLoader with module provides — explicit provider loading.
-8. Layered configurations — multiple module layers in advanced containers.
+Look at `exports com.shop.app.api;`.
 
-### Scene `production` (renderer: `production`)
+Ask what would break if this line were missing, mistyped, or replaced with a 'simpler' shortcut. That question turns syntax into understanding.
 
-1. Production context — why this topic stops incidents.
-2. Code review checklist item — catch misuse before merge.
-3. Observability — logs and metrics should name concepts clearly — not mystery abbreviations.
-4. Tests should encode the contracts we discussed — one failing test beats ten slides.
-5. Refactor toward clarity — juniors read this code six months from now.
-6. Interview answers map directly to daily choices — not trivia for trivia's sake.
-7. Connect to handbook lesson themes — JVM, structure, types, concurrency later in series.
-8. Next episodes build on this — skipping fundamentals creates gaps that show in system design.
+After this example, you should be able to point to the code and explain what problem each important line is solving.
 
-### Scene `mistakes` (renderer: `mistakes`)
+### Example 2 — make it more realistic
 
-1. Export everything.
-2. opens forever instead of narrowing.
-3. Split packages across modules.
+The first example isolates the concept. Real applications rarely stop there. In a practical setting, Modules and JPMS usually appears while you are trying to ship a feature under constraints: correctness, readability, and change over time.
 
-### Scene `interview` (renderer: `interview`)
+So extend the idea: once the basic form works, ask what happens when the input is larger, the call sites multiply, or another teammate must maintain the code next month.
 
-1. JPMS adds explicit dependencies and exports beyond packages.
-2. public not enough — module must export package.
-3. Unnamed module and jlink mention.
+A useful habit is to take the small example and place it inside a tiny scenario — a checkout flow, a student record, a background job, a service boundary — whichever fits the topic. The concept should still be visible, but now it has a reason to exist in a product.
 
-### Scene `walkthrough2` (renderer: `walkthrough2`)
+When you rewrite the example in that scenario, keep the same mechanism. Do not invent a new idea. You are proving that the same Java tool still works when the story gets closer to production.
 
-1. Let's slow down once more with a reviewer mindset.
-2. If you saw this in a pull request, what would you comment?
-3. Naming clarity, null safety, visibility, performance — rotate through that checklist.
-4. Let me say that again in plain language — because this is the kind of detail interviews probe and production punishes.
-5. When you read open-source Java or a teammate's pull request, you'll recognize these patterns immediately.
-6. Pause the video if you want — write a five-line example in your scratch project. Muscle memory beats passive watching.
-7. The handbook treats this as foundational for eighty lessons — JVM tuning, Spring, concurrency all assume you know this cold.
-8. We're not racing the syllabus. We're building mental models that survive version upgrades and job changes.
-9. Senior engineers don't know every API by heart. They know where to look and which mistakes repeat.
-10. Junior engineers who nail fundamentals ramp faster on frameworks — Spring, JPA, Kafka all sit on this base.
-11. Your IDE helps — but only after you understand what the compiler and JVM will accept and reject.
-12. Compile errors are friends. They prevent runtime surprises in customer environments.
-13. Runtime errors with stack traces — read bottom up to your code first, then framework frames.
-14. Unit tests for this topic should be small — one concept per test method — not thousand-line integration only.
-15. When stuck, reduce to main in a scratch class — isolate the language feature from framework noise.
+### What if we skip this approach?
 
-### Scene `connect` (renderer: `connect`)
+Important concepts become memorable when we see the failure mode without them.
 
-1. Connect backward — Episode One gave portability. Episode Two named the toolchain.
-2. Connect forward — collections, streams, and concurrency assume today's concept is solid.
-3. The Java Story is cumulative — skipping an episode creates a hole you feel later as confusion.
-4. Bookmark the handbook lesson that matches this episode — revision sheet before interviews.
-5. Production stories in later episodes reference types and structures we defined in Phase One.
-6. You are still in Phase One — language and platform — the bedrock everything else stands on.
-7. Architects who skipped fundamentals design APIs that leak abstraction — don't skip.
-8. Teaching this to a teammate? Use the same order — hook, example, mistake, interview answer.
-9. Documentation you write for your team should mirror these boundaries — package, type, method.
-10. Code is read more than written — optimize for the reader who has no context yet.
+For example, consider this common mistake: Opening everything 'just to make it work'.
 
-### Scene `revision` (renderer: `revision`)
+That mistake is attractive because it feels shorter or more familiar. The cost arrives later: a subtle bug, a painful refactor, or an incident that is hard to diagnose.
 
-1. Quick revision beat — say the definition out loud without looking.
-2. Explain it to an imaginary junior on your team in two sentences.
-3. Name one production mistake this feature prevents when used correctly.
-4. Name one mistake it causes when used incorrectly.
-5. Connect to interview — one question, one crisp answer — practice now.
-6. If you cannot explain it simply, revisit the example scene once more.
-7. Solid Phase One fundamentals make Phase Two collections feel easy instead of magical.
+This is the 'what if?' test. If removing the concept makes dangerous behavior easy, then the concept is earning its place in the language or the standard library.
 
-### Scene `deep_dive` (renderer: `deep_dive`)
+### Example 3 — a common misunderstanding
 
-1. Deep dive moment — watch this carefully.
-2. In a code review, ask: does this code teach the reader the domain rule?
-3. Tests should document edge cases — null, empty, boundary, overflow where relevant.
-4. Logging — log identifiers and outcomes, not secrets — strings appear in logs constantly.
-5. Metrics — count failures of this operation — helps SRE spot regressions after deploy.
-6. Feature flags — control flow at deploy time — still write clear Java structure underneath.
-7. Refactoring — rename for intent before optimizing — clarity first, microseconds second.
-8. Pair with the handbook revision sheet — twenty bullets beat rereading eighty pages blindly.
-9. OpenJDK documentation and Javadoc — authoritative when interview answers need precision.
-10. Stack Overflow answers vary in quality — verify against language spec for edge cases.
-11. Your future self maintains this code — write the explanation you wish you had today.
-12. Teaching solid Java fundamentals reduces incident pages on-call — that is the real ROI.
+**Misunderstanding 1:** Opening everything 'just to make it work'.
 
-### Scene `floor` (renderer: `floor`)
+When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
 
-1. Before we wrap — one more real-world tie-in.
-2. Teams that document these choices in ADRs avoid re-debating them every sprint.
-3. Onboarding docs linking to this episode save senior engineers from repeating the same lecture.
-4. Lint rules and static analysis encode some of this — SpotBugs, Error Prone, Checkstyle — pick your stack.
-5. Consistency across microservices matters — shared library for Money type beats ten incompatible doubles.
+**Misunderstanding 2:** Circular module dependencies.
 
-### Scene `summary` (renderer: `summary`)
+When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
 
-1. Modules enforce encapsulation at build and runtime.
-2. module-info is contract. Plan migration.
-3. Classpath still valid — modules when boundaries matter.
+**Misunderstanding 3:** Assuming modules alone equal good architecture.
 
-### Scene `teaser` (renderer: `teaser`)
+When you see this in a code review, do not only say 'that is wrong.' Explain the mechanism. Show the safer pattern. Connect it back to the reason the feature exists.
 
-1. Language foundations in place. Next — everyday collections.
-2. Episode Twenty-One — Lists.
-3. Ordered sequences and choosing implementations.
-4. See you there.
-_Total beats: expanded for ~8–12 minute conversational delivery (well above the 4-minute floor; under the 15-minute ceiling)._
+If you can diagnose the misunderstanding, you are no longer memorizing — you are teaching yourself to design.
+
+### Interview-style checkpoint
+
+Question: What problem do modules solve?
+
+Answer in spoken form: Reliable configuration and stronger encapsulation than a flat classpath.
+
+Then add one sentence about a trade-off or failure mode. That extra sentence is what makes the answer sound like experience instead of a flashcard.
+
+### Connecting the thread
+
+We came from **Sealed Classes**. That set up a need. **Modules and JPMS** is one of Java's answers to that need.
+
+You should now be able to say why the idea exists, how a small Java example works, where you would use it, and what people often get wrong.
+
+### Looking ahead
+
+Once this is solid, a new challenge appears. That challenge leads us to **Lists**.
+
+We will start there the same way: with a problem, then the reason Java's approach exists, then code we can walk through together.
 
 ## Source attribution (reference document)
 
-(reference document)
-
 Reference document (user attachment): **`Java_JVM_Handbook_GPT55__1_.html`** — *Java & JVM Handbook — 80 Lessons*.
 
-- **Primary handbook lesson:** Lesson **20** — *Modules and JPMS*.
-- **Series catalog:** Episode 20 ↔ handbook lesson 20 — *Modules and JPMS*.
-- **How content was used:** The handbook provided the **topic outline and teaching points**. Spoken lines were **rewritten** into short documentary beats matched to motion-graphics scenes (per user guidance: own narration synced to presentation; handbook as reference, not a script to read aloud).
+- **Primary curriculum mapping:** Episode 20 / **Modules and JPMS** (see `../reference/EPISODE_CATALOG.md` and handbook TOC notes for any remaps).
+- **How content was used:** Handbook/curriculum provided the topic spine and teaching points. Narration was rewritten as **descriptive, example-driven instructor prose** (Introduce → Explain → Illustrate → Code → Walk Through → Question → Extend → Connect), not short disconnected definitions.
+- **Runtime note:** Aimed at a **4–15 minute** lesson (soft aim ~10–12).
 
-- Full handbook HTML is **not checked into git** (original upload was ephemeral). Attribution for this episode is by **lesson title / topic** from the recovered TOC and the series catalog.
+### Teaching points drawn from the topic bank
 
-- **Narration expansion:** Spoken lines expanded for **4–15 minute** conversational runtime; handbook still used as topic reference.
-
-### Scene ↔ curriculum intent
-
-- **`hook`** — starts from: _Sealed types close hierarchies. Modules close the classpath._
-- **`title`** — starts from: _Episode Twenty._
-- **`why`** — starts from: _Why modules exist._
-- **`info`** — starts from: _module-info.java is the contract._
-- **`directives`** — starts from: _Know the key directives._
-- **`unnamed`** — starts from: _Reality check — the unnamed module._
-- **`when`** — starts from: _When modules help._
-- **`mistakes`** — starts from: _Three common mistakes._
-- **`interview`** — starts from: _Interview question — what does JPMS add over packages and JARs?_
-- **`teaser`** — starts from: _Language features are in place. Next — the collections you use every day._
-
-- **Runtime note:** Narration expanded for a **4–15 minute** conversational lesson (aim ~8–12) with a worked example — not the ultra-short headline cut.
+- module-info requires/exports/opens.
+- Explicit dependencies.
+- Stronger encapsulation than packages alone.
+- Migration can be incremental.
+- Classpath apps still exist — know both worlds.
